# horus-runtime

./: .agpl3.tmpl  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pydoc-markdown.yml  pyproject.toml  requirements.txt
.claude/skills/horus-plugin/: SKILL.md
.claude/skills/horus-plugin/assets/: entry_points_snippet.toml  plugin_template.py
.claude/skills/horus-plugin/references/: architecture.md  plugin-catalog.md  registry.md
.claude/skills/horus-workflow/: SKILL.md
.claude/skills/horus-workflow/assets/: workflow_example.py  workflow_example.yaml
.claude/skills/horus-workflow/references/: execution.md  python-workflows.md  yaml-schema.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-check.yml  docs.yml  python-ci.yaml  release.yaml
docs/design/: 0001-agentless-targets-composable-executors.md
src/: main.py
src/horus_builtin/: __init__.py  tui.py
src/horus_builtin/artifact/: file.py  folder.py  json.py  local_base.py  pickle.py
src/horus_builtin/artifacts/: file.py  folder.py  local_base.py
src/horus_builtin/event/: artifact_event.py  log_subscriber.py  task_event.py  tui_subscriber.py  workflow_event.py
src/horus_builtin/events/: loguru_subscriber.py
src/horus_builtin/executor/: _cwd_lock.py  docker.py  python.py  python_exec.py  python_fn.py  shell.py
src/horus_builtin/executors/: local.py  shell.py
src/horus_builtin/input/: cli.py
src/horus_builtin/interaction/: cli.py
src/horus_builtin/interaction/common/: confirm.py  dropdown.py  file.py  string.py
src/horus_builtin/middleware/: task_log_file.py  task_time.py  workflow_time.py
src/horus_builtin/runtime/: command.py  python.py  python_script.py  python_string.py  substitution.py
src/horus_builtin/runtimes/: command.py
src/horus_builtin/task/: function.py  horus_task.py
src/horus_builtin/tasks/: event.py  horus_task.py
src/horus_builtin/transfer/: __init__.py  local_noop.py
src/horus_builtin/workflow/: branch.py  condition.py  dag.py  horus_workflow.py  loop.py  map.py  scheduler.py  subworkflow.py
src/horus_builtin/workflow/subworkflow/: __init__.py  errors.py  expander.py  lowering.py  ports.py
src/horus_builtin/workflows/: horus_workflow.py
src/horus_runtime/: cli.py  context.py  i18n.py  logging.py  packaging.py  runtime.py  sanitize.py  settings.py  version.py
src/horus_runtime/core/: placement.py  resources.py
src/horus_runtime/core/artifact/: base.py  exceptions.py  file_artifact.py  folder_artifact.py  local_artifact_base.py  store.py
src/horus_runtime/core/base/: file_artifact.py  folder_artifact.py  local_artifact_base.py
src/horus_runtime/core/executor/: base.py  exceptions.py
src/horus_runtime/core/interaction/: base.py  exceptions.py  renderer.py  transport.py
src/horus_runtime/core/interfaces/: artifact.py
src/horus_runtime/core/registry/: artifact_registry.py  auto_registry.py  executor_registry.py  registry_scan.py  runtime_registry.py  task_registry.py  workflow_registry.py
src/horus_runtime/core/runtime/: base.py  events.py
src/horus_runtime/core/task/: base.py  exceptions.py  status.py
src/horus_runtime/core/transfer/: exceptions.py  generic.py  strategy.py
src/horus_runtime/core/workflow/: base.py  condition.py  edge.py  exceptions.py  status.py
src/horus_runtime/event/: async_loop.py  base.py  bus.py  subscriber.py  transport.py
src/horus_runtime/events/: base.py  bus.py  subscriber.py  transport.py
src/horus_runtime/input/: base.py
src/horus_runtime/locale/: messages.pot
src/horus_runtime/locale/es/LC_MESSAGES/: horus_runtime.po
src/horus_runtime/logging/: logging.py
src/horus_runtime/middleware/: auto_middleware.py  executor.py  interaction.py  runtime.py  target.py  target_command.py  task.py  transfer.py  workflow.py
src/horus_runtime/registry/: artifact_registry.py  auto_registry.py  auto_registry_product.py  bus_transport_registry.py  event_registry.py  exceptions.py  executor_registry.py  runtime_registry.py  subscriber_registry.py  task_registry.py  workflow_registry.py
src/horus_runtime/utils/: timing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_runtime_integration.py
tests/unit/: __init__.py  test_fixtures.py  test_i18n.py  test_logging.py  test_main.py  test_packaging.py  test_sanitize.py
tests/unit/artifact/: test_artifact_base.py  test_builtin_artifact.py  test_store.py
tests/unit/boot/: test_boot.py
tests/unit/cli/: test_cli.py  test_run.py
tests/unit/core/: test_placement.py  test_resources.py
tests/unit/event/: common.py  test_builtin_log_subscriber.py  test_event_system.py  test_tui_subscriber.py
tests/unit/executor/: test_builtin_executor.py  test_collect_side_artifacts.py  test_docker_executor.py  test_executor_base.py
tests/unit/i18n/: test_i18n.py
tests/unit/interaction/: test_builtin_interactions.py  test_interaction.py
tests/unit/middleware/: test_middleware.py  test_target_command.py  test_task_log_file.py
tests/unit/registry/: test_auto_registry.py  test_schema_generation.py
tests/unit/runtime/: test_anchor_local_paths.py  test_builtin_runtime.py  test_python_script.py  test_python_string.py  test_runtime_base.py  test_substitution.py
tests/unit/task/: conftest.py  test_builtin_function_task.py  test_builtin_task.py  test_task_base.py
tests/unit/transfer/: test_builtin_transfer.py  test_transfer.py
tests/unit/workflow/: test_branch_router.py  test_builtin_workflow.py  test_conditions.py  test_dynamic_mutation.py  test_edges.py  test_loops.py  test_map.py  test_run_layout.py  test_scheduler.py  test_subworkflow.py  test_workflow.py
