[project]
name = "horus-runtime"
description = "The Horus workflow manager runtime. Execute advanced workflows with multi-environment support, HPC integration, automatic artifact management, and more."
version = "0.0.1"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic~=2.0",
]

[project.optional-dependencies]
dev = [
    "black~=25.0",
    "isort~=7.0",
    "pylint~=4.0",
    "flake8~=7.0",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pyright~=1.1",
    "Flake8-pyproject~=1.2",
    "pre_commit~=4.0",
    "licenseheaders~=0.8",
    "babel~=2.0"
]

[project.scripts]
horus = "horus_runtime.cli:main"

[tool.setuptools.package-data]
horus_runtime = ["py.typed", "locale/**/LC_MESSAGES/*.mo"]

[tool.black]
line-length = 79
target-version = ['py310','py311','py312','py313','py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --verbose
    --cov=src
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=90
"""

[tool.pylint.messages_control]
max-line-length = 79
disable = [
    "E0401", # Unable to import 'foo'. Pylance is who reports missing imports
    "R0903", # Too few public methods
]

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
