[project]
name = "horus-runtime"
description = "The Horus workflow manager runtime. Execute advanced workflows with multi-environment support, HPC integration, automatic artifact management, and more."
version = "0.0.1"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic~=2.0",
    "pyyaml~=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.15",
    "mypy~=1.19",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pre_commit~=4.0",
    "licenseheaders~=0.8",
    "babel~=2.0",
]


[project.scripts]
horus = "horus_runtime.cli:main"

# Built-in plugins
[project.entry-points."horus.artifacts"]
file = "horus_builtin.artifacts.file"
folder = "horus_builtin.artifacts.folder"

[project.entry-points."horus.executors"]
shell = "horus_builtin.executors.shell"

[project.entry-points."horus.runtimes"]
command = "horus_builtin.runtimes.command"

[project.entry-points."horus.tasks"]
horus_task = "horus_builtin.tasks.horus_task"

[tool.setuptools.package-data]
horus_runtime = ["py.typed", "locale/**/LC_MESSAGES/*.mo"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --verbose
    --cov=src
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=90
"""

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "PL",  # pylint
    "RUF", # ruff-specific
]

ignore = [
    "E203",   # Whitespace before ':', conflicts with formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["build", "dist"]
